--- a/package.json
+++ b/package.json
@@ -1,37 +1,26 @@
 {
-  "name": "blog-rest-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js",
-    "start-server": "node app.js"
-  },
-  "author": "Reuben Coutinho",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^1.18.3"
-  },
+  "name": "node-complete-social-network-prep",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@sendgrid/mail": "^7.4.2",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "connect-mongodb-session": "^2.4.1",
-    "csurf": "^1.11.0",
-    "dotenv": "^8.2.0",
-    "ejs": "^3.1.5",
-    "express": "^4.17.1",
-    "express-handlebars": "^5.2.0",
-    "express-session": "^1.17.1",
-    "express-validator": "^6.9.2",
-    "mongodb": "^3.6.3",
-    "mongoose": "^5.11.11",
-    "multer": "^1.4.2",
-    "nodemailer": "^6.4.17",
-    "nodemailer-sendgrid-transport": "^0.2.0",
-    "pdfkit": "^0.11.0",
-    "pug": "^3.0.0",
-    "stripe": "^8.133.0"
-  }
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.0.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
