Updated Socket IO connection

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "pdfkit": "^0.11.0",
     "pug": "^3.0.0",
+    "socket.io": "^4.0.1",
     "stripe": "^8.133.0"
   }
 }
